Kubernetes/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: fast-api
spec:
  type: LoadBalancer
  selector:
    app: fast-api
  ports:
  - port: 80
    targetPort: 80
